build: dependência Bean Validation adicionada ao servidor

--- a/mixpresso-api/pom.xml
+++ b/mixpresso-api/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com.mixpresso</groupId>
 	<artifactId>mixpresso-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.1</version>
 	<name>mixpresso-api</name>
 	<description>API da aplicação Mixpresso.</description>
 	<properties>
@@ -47,6 +47,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
